--- a/cordova-plugin-outline/plugin.xml
+++ b/cordova-plugin-outline/plugin.xml
@@ -47,6 +47,7 @@
       </receiver>
 
       <meta-data android:name="io.sentry.auto-init" android:value="false" />
+      <meta-data android:name="usesCleartextTraffic" android:value="true" />
     </config-file>
 
     <hook type="before_plugin_install" src="android/scripts/copy_third_party.js" />
